sfSandBoxCode/force-app/main/default/objects/Sanergy_Department__c/Sanergy_Department__c.object-meta.xml
<CustomObject>
    <description>Sanergy Departments</description>
    <label>Sanergy Department</label>
    <nameField>
        <label>Sanergy Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sanergy Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>