sfSandBoxCode/force-app/main/default/objects/Sanergy_Department__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sanergy</fullName>
            </value>
            <value>
                <fullName>Fresh Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>