sfSandBoxCode/force-app/main/default/objects/Sanergy_Department__c/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <label>Department Code</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>