sfSandBoxCode/force-app/main/default/objects/Sanergy_Department__c/fields/Department_Status__c.field-meta.xml
<CustomField>
    <fullName>Department_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Department Status</description>
    <inlineHelpText>Department Status</inlineHelpText>
    <label>Department Status</label>
    <type>Checkbox</type>
</CustomField>