sfSandBoxCode/force-app/main/default/objects/Sanergy_Department__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead (Employee A/c)</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Sanergy Departments</relationshipLabel>
    <relationshipName>Sanergy_Departments</relationshipName>
    <type>Lookup</type>
</CustomField>