sfSandBoxCode/force-app/main/default/objects/Sanergy_Department__c/recordTypes/FreshLife.recordType-meta.xml
<RecordType>
    <fullName>FreshLife</fullName>
    <active>true</active>
    <label>FreshLife</label>
</RecordType>