sfSandBoxCode/force-app/main/default/objects/Sanergy_Department__c/recordTypes/Sanergy.recordType-meta.xml
<RecordType>
    <fullName>Sanergy</fullName>
    <active>true</active>
    <label>Sanergy</label>
</RecordType>