sfSandBoxCode/force-app/main/default/objects/Sanergy_Department__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Team_Lead__c</columns>
    <columns>Company__c</columns>
    <columns>Department_Code__c</columns>
    <columns>Department_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>