sfSandBoxCode/force-app/main/default/objects/Sanergy_Department__c/listViews/FLI_Directors_Sanergy_Department.listView-meta.xml
<ListView>
    <fullName>FLI_Directors_Sanergy_Department</fullName>
    <filterScope>Queue</filterScope>
    <label>FLI Directors</label>
    <queue>FLI_Directors</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>